--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,4 +22,7 @@ layout: default
       {% endif %}
     </div>
   </div>
+<script type="text/javascript"
+    src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 </main>
