Add image classes
Signed-off-by: Kapileshwar Singh <kapileshwarsingh@gmail.com>

--- a/css/main.scss
+++ b/css/main.scss
@@ -24,3 +24,23 @@ $grey-color-dark:  darken($grey-color, 25%);
         "post",
         "search"
 ;
+
+.image-true {
+	max-width: 100% !important;
+	display: block;
+	width: unset !important;
+}
+
+.image-half {
+	max-width: 100% !important;
+	display: block;
+	width: 50% !important;
+	margin: 0 auto;
+}
+
+.image-quarter {
+	max-width: 100% !important;
+	display: block;
+	width: 25% !important;
+	margin: 0 auto;
+}
